--- a/reports/sections/sarsearch/sarsearch_en.rmd
+++ b/reports/sections/sarsearch/sarsearch_en.rmd
@@ -59,13 +59,15 @@ outputList <- master_intersect(sarsearch_rr$data_sf, mapDataList, getRegion = TR
 introResult <- !is.null(outputList$studyData)
 summaryIntroTable <- add_row_to_intro_summary(summaryIntroTable, name="[SAR search DMapp](#sarsearch-section)", result=introResult)
 
-
 sarsearchTable <- sf::st_drop_geometry(outputList$studyData)
-sarsearchTable <- dplyr::select(sarsearchTable, c(species_name, year, name, source, record_type, notes))
-names(sarsearchTable) <- c("Species Name", "Year", "Location Name", "Source", "Geometry Type", "Notes")
+#sarsearchTable <- dplyr::select(sarsearchTable, c(species_name, year, name, source, record_type, notes))
+sarsearchTable <- if (!is.null(outputList$studyData)) {
+    dplyr::select(sarsearchTable, c(species_name, year, name, source, record_type, notes))
+  names(sarsearchTable) <- c("Species Name", "Year", "Location Name", "Source", "Geometry Type", "Notes")  
+    }
+
 sarsearchTable[is.na(sarsearchTable)] <- ""
 row.names(sarsearchTable) <- NULL
-
 ```
 
 ```{r sarsearch-check, echo=FALSE, results='asis',}
