--- a/reports/sections/rv/rv_en.Rmd
+++ b/reports/sections/rv/rv_en.Rmd
@@ -66,7 +66,7 @@ if (is.null(outputList$studyData)) {
     Report_RV <- "* There are relevant records in the Maritimes Research Vessel (RV) Survey for this search area."
     surveyTypeTable <- table(unique(outputList$studyData[,c('ELAT','ELONG','geometry', 'surveyType')])$surveyType)
     surveyTypeDf <- as.data.frame(surveyTypeTable)
-    names(surveyTypeDf) <- c("Suvery", "Number of trawl samples")
+    names(surveyTypeDf) <- c("Survey", "Number of trawl samples")
     rownames(surveyTypeDf) <- NULL
   }
 Report_RV<-noquote(Report_RV)
