Adding oecm to spatial planning templates

--- a/app/templates/FR/context/spatial_planning.Rmd
+++ b/app/templates/FR/context/spatial_planning.Rmd
@@ -6,3 +6,6 @@
 
 ```{r child = here::here("sections/conservationSites/conservationSites_fr.Rmd")}
 ```
+
+```{r child = here::here("sections/oecm/oecm_fr.Rmd")}
+```
