--- a/app/templates/EN/context/spatial_planning.Rmd
+++ b/app/templates/EN/context/spatial_planning.Rmd
@@ -8,6 +8,8 @@ This module describes information relevant to spatial planning from a variety of
 ```{r child = here::here("reports/sections/conservationSites/conservationSites_en.Rmd")}
 ```
 
+```{r child = here::here("reports/sections/oecm/oecm_en.Rmd")}
+```
 
 ```{r child = here::here("reports/sections/opprrpe/opprrpe_en.Rmd")}
 ```
