--- a/reports/sections/dcsb/dcsb_fr.Rmd
+++ b/reports/sections/dcsb/dcsb_fr.Rmd
@@ -6,7 +6,7 @@ output:
     theme: paper
 bibliography: '`r here::here("app/data/mybiblio.bib")`'
 ---
-```{r ebsa-load-common, child = here::here("reports/sections/commonSections/commonIntro.Rmd")}
+```{r dcsb-load-common, child = here::here("reports/sections/commonSections/commonIntro.Rmd")}
 ``` 
 
 ```{r eval=FALSE}
@@ -16,59 +16,58 @@ if (FALSE) { #load in data:
   intro_setup(studyArea, env = environment())  
 }
 ```
-### **Zones d’importance écologique et biologique (ZIEB)**  
+### **Délimitation des coraux et des éponges d'importantes zones benthiques dans l'est du Canada (2016)**  
 
-```{r EBSA-load, include=FALSE}
-load_rdata(c("ebsa_rr"), regionStr, env = environment())
+```{r DCSB-load, include=FALSE}
+load_rdata(c("dcsb_rr"), regionStr, env = environment())
 ```
 
-```{r EBSA-meta, results='asis'}
-write_meta(ebsa_rr, "FR")
-```
-Histoir ZIEB: <https://gisp.dfo-mpo.gc.ca/portal/apps/MapJournal/index.html?appid=b91f85de60f44a7b90633e4b43e3916a>
-
-Description de l’ensemble de données (tirée du dossier des données ouvertes)  [@OpenData_ebsa]:
-```{r EBSA-text, results='asis'}
-writeLines(noquote(ebsa_rr$text$fr))
-
+```{r DCSB-meta, results='asis'}
+write_meta(dcsb_rr, "FR")
 ```
 
-#### ***Résultats de la recherche des ZIEB par zone***  
+Description de l’ensemble de données (tirée du dossier des données ouvertes)  [@OpenData_dcsb]:
+```{r DCSB-text, results='asis'}
+writeLines(noquote(dcsb_rr$text$fr))
 
-```{r EBSA-results, echo=FALSE, results='asis'}
+```
+
+#### ***Résultats de la recherche des DCSB par zone***  
+
+```{r DCSB-results, echo=FALSE, results='asis'}
 #function for overlap
-EBSAoutput <- master_intersect(ebsa_rr$data_sf, mapDataList, getRegion=TRUE)
+DCSBoutput <- master_intersect(dcsb_rr$data_sf, mapDataList, getRegion=TRUE)
 ```
  
-```{r EBSA-check, echo=FALSE, results='asis'}
+```{r DCSB-check, echo=FALSE, results='asis'}
 #function for overlap
-Query_output_EBSA<-if(is.null(EBSAoutput$studyData)){
-    "* La zone de recherche ne chevauche pas les zones d’importance écologique et biologique (ZIEB)."
+Query_output_DCSB<-if(is.null(DCSBoutput$studyData)){
+    "* La zone de recherche chevauche les zones benthiques importantes de coraux et d'éponges identifiées dans l'est du Canada."
   } else {
-    "* La zone de recherche chevauche les zones d’importance écologique et biologique (ZIEB)."
+    "* La zone de recherche ne chevauche pas les zones benthiques importantes de coraux et d'éponges identifiées dans l'est du Canada."
   }
-Query_output_EBSA2<-noquote(Query_output_EBSA)
+Query_output_DCSB2<-noquote(Query_output_DCSB)
 
-writeLines(Query_output_EBSA)
+writeLines(Query_output_DCSB)
 
 ```
 
-```{r EBSA-table,  echo=FALSE, results='asis'}
-EBSATable <- EBSA_report(EBSAoutput$studyData, lang="FR")
-if (!is.null(EBSATable)){
-   knitr::kable(EBSATable, align="l", caption="Details for EBSA's overlapping the study area.</b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+```{r DCSB-table,  echo=FALSE, results='asis'}
+DCSBTable <- DCSB_report(DCSBoutput$studyData, lang="FR")
+if (!is.null(DCSBTable)){
+   knitr::kable(DCSBTable, align="l", caption="Détails pour les zones benthiques importantes de coraux et d'éponges dans l'est du Canada chevauchant la zone d'étude.</b>", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 }
 ```
 
 
-```{r EBSA-region-plot, fig.height=7, fig.width=11, fig.cap= 'Niveau de qualité : Élevée. Niveau de sécurité : Aucun. Carte montrant les zones d’importance écologique et biologique (ZIEB) par rapport à la zone de recherche définie par l’utilisateur (entourée de rouge).'}
-if (!is.null(EBSAoutput$regionData)){
-  plot_rr_sf(regionMap, EBSAoutput$regionData, ebsa_rr$attribute)
+```{r DCSB-region-plot, fig.height=7, fig.width=11, fig.cap= 'Niveau de qualité : Élevée. Niveau de sécurité : Aucun. Carte montrant les zones benthiques importantes de coraux et d\'éponges dans l\'est du Canada dans la biorégion du plateau néo-écossais. La zone de recherche est représentée par un contour rouge et une vue plus détaillée est présentée dans la figure ci-dessous, si des données pertinentes sont présentes. Les données ont été obtenues à partir de @OpenData_dcsb.'}
+if (!is.null(DCSBoutput$regionData)){
+  plot_rr_sf(regionMap, DCSBoutput$regionData, dcsb_rr$attribute)
 }
 ```
 
-```{r EBSA-area-plot, fig.height=7, fig.width=11, fig.cap= 'Niveau de qualité : Élevée. Niveau de sécurité : Aucun. Carte montrant les zones d’importance écologique et biologique (ZIEB) dans la zone de recherche définie par l’utilisateur (entourée de rouge).'}
-if(!is.null(EBSAoutput$studyData)){
-  plot_rr_sf(areaMap, EBSAoutput$mapData, ebsa_rr$attribute)
+```{r DCSB-area-plot, fig.height=7, fig.width=11, fig.cap= 'Niveau de qualité : Élevée. Niveau de sécurité : Aucun. Carte montrant les zones benthiques importantes de coraux et d\'éponges dans l\'est du Canada dans la zone de recherche (contour rouge). Les données ont été obtenues à partir de @OpenData_dcsb.'}
+if(!is.null(DCSBoutput$studyData)){
+  plot_rr_sf(areaMap, DCSBoutput$mapData, dcsb_rr$attribute)
 }
 ```
