--- a/reports/sections/dcsb/dcsb_en.Rmd
+++ b/reports/sections/dcsb/dcsb_en.Rmd
@@ -62,12 +62,12 @@ if (!is.null(DCSBTable)){
 
 ```{r DCSB-region-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(dcsb_rr, "EN"), 'Map showing Coral and Sponge Significant Benthic Areas in Eastern Canada within the Scotian Shelf bioregion. The search area is shown as a red outline, and a more detailed view is shown in the figure below, if relevant data are present. Data were obtained from @OpenData_dcsb.')}
 if (!is.null(DCSBoutput$regionData)){
-  plot_rr_sf(regionMap, DCSBoutput$regionData, dcsb_rr$attribute)
+  plot_rr_sf(regionMap, DCSBoutput$regionData, dcsb_rr$attribute, legendName= "Significant Benthic Areas", alpha = 0.6)
 }
 ```
 
 ```{r DCSB-area-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(dcsb_rr, "EN"), 'Map showing Coral and Sponge Significant Benthic Areas in Eastern Canada within the search area (red outline). Data were obtained from @OpenData_dcsb.')}
 if(!is.null(DCSBoutput$studyData)){
-  plot_rr_sf(areaMap, DCSBoutput$mapData, dcsb_rr$attribute)
+  plot_rr_sf(areaMap, DCSBoutput$mapData, dcsb_rr$attribute, legendName= "Significant Benthic Areas", alpha = 0.6)
 }
 ```
