--- a/reports/sections/calanus/calanus_en.Rmd
+++ b/reports/sections/calanus/calanus_en.Rmd
@@ -61,17 +61,17 @@ if(calanusResult){
 } 
 
 if (!is.null(calanusTable)){
-   knitr::kable(calanusTable, align="l", caption="Details for Ecologically and Biologically Significant Areas (calanuss) overlapping the study area.", booktabs = T, escape = F, linesep="") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+   knitr::kable(calanusTable, align="l", caption="Details for Calanus spp. size and lipid content metrics overlapping the study area.", booktabs = T, escape = F, linesep="") %>% kableExtra::kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 }
 ```
 
-```{r calanus-region-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(calanus_rr, "EN"), 'Map showing Ecologically and Biologically Significant Areas (calanuss) within the Scotian Shelf bioregion. The search area is shown as a red outline, and a more detailed view is shown in the figure below, if relevant data are present. Data were obtained from @OpenData_calanus.')}
+```{r calanus-region-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(calanus_rr, "EN"), 'Map showing Calanus spp. size and lipid content metrics. The search area is shown as a red outline, and a more detailed view is shown in the figure below, if relevant data are present. Data were obtained from @OpenData_calanus.')}
 if (!is.null(calanusOutput$regionData)){
   plot_rr_sf(regionMap, calanusOutput$regionData, calanus_rr$attribute)
 }
 ```
 
-```{r calanus-area-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(calanus_rr, "EN"), 'Map showing Ecologically and Biologically Significant Areas (calanuss) within the search area (red outline). Data were obtained from @OpenData_calanus.')}
+```{r calanus-area-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(calanus_rr, "EN"), 'Map showing Calanus spp. size and lipid content metrics within the search area (red outline). Data were obtained from @OpenData_calanus.')}
 if(!is.null(calanusOutput$studyData)){
   plot_rr_sf(areaMap, calanusOutput$mapData, calanus_rr$attribute)
 }
