--- a/reports/sections/isdb-marfis/isdbMarfis_en.Rmd
+++ b/reports/sections/isdb-marfis/isdbMarfis_en.Rmd
@@ -45,7 +45,7 @@ load_rdata(c("marfis_rr"), regionStr, env = environment())
 write_meta(marfis_rr, "EN")
 ```
 
-The Maritimes Fishery Information System (MARFIS) is a DFO database, managed by the Policy & Economics Branch. MARFIS contains catch and effort, quota, and licensing information for the Maritimes Region. Log information for all commercial fisheries that land within this region is associated with this data. If a Maritimes Region commercial vessel makes landings in another DFO region or outside of Canadian waters, information is not included in the MARFIS database, irrespective of whether that vessel originated in Maritimes Region. The majority of catch information is related to commercial offloads i.e. dockside monitoring programs. Reported information contained within MARFIS is not considered spatially or temporally synoptic; therefore, integrating additional information on presence and/or habitat use (i.e., spawning, migration, feeding) from larger-scale studies is strongly recommended. There is also more limited data related to discards and the Species At Risk data logs. Not all catch records have associated lat/lon coordinates or information on fishing effort. However, generally all records are associated with a NAFO Division and NAFO Unit Area, even if no coordinates have been provided. Production data (<4 years old) are considered preliminary and subject to change without notice. Changes to archived data (>4 years old) may also occur but are generally limited. Ongoing QA/QC work is done on the MARFIS database, but not all errors are corrected. If you have data errors, questions, or corrections, you can send them to our data quality inbox: CDDDataQuality@dfo-mpo.gc.ca. This information about MARFIS was provided by Colin.O'Neil@dfo-mpo.gc.ca (July 2020, Policy & Economics Branch). If you are interested in including comercial catch data in a publication, please remember to aggregate it (https://github.com/Maritimes/Mar.utils/blob/master/R/assess_privacy.r).
+The Maritimes Fishery Information System (MARFIS) is a DFO database, managed by the Policy & Economics Branch. MARFIS contains catch and effort, quota, and licensing information for the Maritimes Region. Log information for all commercial fisheries that land within this region is associated with this data. If a Maritimes Region commercial vessel makes landings in another DFO region or outside of Canadian waters, information is not included in the MARFIS database, irrespective of whether that vessel originated in Maritimes Region. The majority of catch information is related to commercial offloads i.e. dockside monitoring programs. Reported information contained within MARFIS is not considered spatially or temporally synoptic; therefore, integrating additional information on presence and/or habitat use (i.e., spawning, migration, feeding) from larger-scale studies is strongly recommended. There is also more limited data related to discards and the Species At Risk data logs. Not all catch records have associated lat/lon coordinates or information on fishing effort. However, generally all records are associated with a NAFO Division and NAFO Unit Area, even if no coordinates have been provided. Production data (<4 years old) are considered preliminary and subject to change without notice. Changes to archived data (>4 years old) may also occur but are generally limited. Ongoing QA/QC work is done on the MARFIS database, but not all errors are corrected. If you have data errors, questions, or corrections, you can send them to our data quality inbox: CDDDataQuality@dfo-mpo.gc.ca. This information about MARFIS was provided by Colin.O'Neil@dfo-mpo.gc.ca (July 2020, Policy & Economics Branch). If you are interested in including commercial catch data in a publication, please remember to aggregate it (https://github.com/Maritimes/Mar.utils/blob/master/R/assess_privacy.r).
 
 First Nations - Food, Social, and Ceremonial (FSC) Landed Offloads Reporting:  Recommendation was to exclude FSC landed offload data from this standard MARFIS landed offload data exports (i.e. buyers with a buyer code of 9004 – FIRST NATIONS FOOD FISHERY was filtered out). Commercial and Communal Commercial harvesting activity are expected to be fully reported to DFO and included comprehensively in the MARFIS database. The current scope of FSC data inclusion in MARFIS is only when there is FSC harvesting happening on the same trip as commercial or commercial communal harvesting activity. This makes the FSC data in MARFIS very partial and spotty, and often is accidentally grouped in with Communal Commercial harvest activity. The stewards of the FSC data are Indigenous Fisheries Management, who should be contacted about publishing data related to all FSC catch records submitted to the department. The amount of overall FSC catch in the MARFIS database is very minimal in relation to the Commercial and Communal Commercial data and will mostly show up in Lobster and Sea Scallop fisheries. 
 
