--- a/app/templates/EN/species/fish_invertebrates_ceteaceans.Rmd
+++ b/app/templates/EN/species/fish_invertebrates_ceteaceans.Rmd
@@ -18,6 +18,9 @@ editor_options:
 ```{r child = here::here("reports/sections/offshoreScallop/offshoreScallop_en.Rmd")}
 ```
 
+```{r child = here::here("reports/sections/inshoreScallop/inshoreScallop_en.Rmd")}
+```
+
 ```{r child = here::here("reports/sections/isdb-marfis/isdbMarfis_en.Rmd")}
 ```
 
