--- a/app/templates/EN/species/fish_invertebrates_ceteaceans.Rmd
+++ b/app/templates/EN/species/fish_invertebrates_ceteaceans.Rmd
@@ -21,6 +21,9 @@ editor_options:
 ```{r child = here::here("reports/sections/inshoreScallop/inshoreScallop_en.Rmd")}
 ```
 
+```{r child = here::here("reports/sections/snowCrabTrawl/snowCrabTrawl_en.Rmd")}
+```
+
 ```{r child = here::here("reports/sections/isdb-marfis/isdbMarfis_en.Rmd")}
 ```
 
